--- a/app/src/main/res/layout/todo_view_model.xml
+++ b/app/src/main/res/layout/todo_view_model.xml
@@ -39,13 +39,28 @@
                 android:text="TextView" />
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/btnCompletadoToDoModelView"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:backgroundTint="#00FFFFFF"
-            app:srcCompat="@android:drawable/checkbox_off_background" />
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/btnCompletadoToDoModelView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:backgroundTint="#00FFFFFF"
+                app:srcCompat="@android:drawable/checkbox_off_background" />
+
+            <ImageButton
+                android:id="@+id/btnDeleteToDoModelView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#00FFFFFF"
+                app:srcCompat="@android:drawable/ic_menu_delete" />
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
